--- a/slides/slides_ch2.tex
+++ b/slides/slides_ch2.tex
@@ -846,7 +846,7 @@ blue-green algae levels.
     \begin{align*}
       \text{where} \quad
       \mu_n=\frac{\frac{1}{\tau_0^2}\mu_0+\frac{n}{\sigma^2}\bar{y}}{\frac{1}{\tau_0^2}+\frac{n}{\sigma^2}} \quad
-      \text{ja} \quad \frac{1}{\tau_n^2} = \frac{1}{\tau_0^2}+\frac{n}{\sigma^2}
+      \text{and} \quad \frac{1}{\tau_n^2} = \frac{1}{\tau_0^2}+\frac{n}{\sigma^2}
     \end{align*}
   \item If $\tau_0^2=\sigma^2$, prior corresponds to one virtual observation with value $\mu_0$
     \pause
